--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -23,47 +23,47 @@
   <div>
   <ul class="prise__list">
     <li class="prise__list-item">
-      <h5>Basic plan</h5>
-      <span>$ 599.00</span>
-      <p>Per Visit Charge</p>
+      <h5 class="prise__list-name">Basic plan</h5>
+      <span class="prise__list-sum">$ 599.00</span>
+      <p class="prise__list-visit">Per Visit Charge</p>
       <ul>
-        <li>Electrical Service</li>
-        <li>Distribution Power Systemss</li>
-        <li>High & Medium Voltages</li>
-        <li>Industrial Control Systems</li>
-        <li>Switch Installation</li>
-        <li>Generator Installations</li>
-        <li>Innovative Construction</li>
+        <li class="prise__list-li">Electrical Service</li>
+        <li class="prise__list-li">Distribution Power Systemss</li>
+        <li class="prise__list-li">High & Medium Voltages</li>
+        <li class="prise__list-li">Industrial Control Systems</li>
+        <li class="prise__list-li">Switch Installation</li>
+        <li class="prise__list-li">Generator Installations</li>
+        <li class="prise__list-li">Innovative Construction</li>
       </ul>
       <button type="button">Buy Now</button>
     </li>
-    <li>
-      <h5>Standard</h5>
-      <span>$ 699.00</span>
-      <p>Per Visit Charge</p>
+    <li class="prise__list-item">
+      <h5 class="prise__list-name">Standard</h5>
+      <span class="prise__list-sum">$ 699.00</span>
+      <p class="prise__list-visit">Per Visit Charge</p>
       <ul>
-        <li>PLC Controls</li>
-        <li>Conveyor systems</li>
-        <li>Wiring renovations</li>
-        <li>Electric Water Heater Repair</li>
-        <li>Service And Panel Upgrades</li>
-        <li>Efficient Lighting Solutions</li>
-        <li>Site lighting</li>
+        <li class="prise__list-li">PLC Controls</li>
+        <li class="prise__list-li">Conveyor systems</li>
+        <li class="prise__list-li">Wiring renovations</li>
+        <li class="prise__list-li">Electric Water Heater Repair</li>
+        <li class="prise__list-li">Service And Panel Upgrades</li>
+        <li class="prise__list-li">Efficient Lighting Solutions</li>
+        <li class="prise__list-li">Site lighting</li>
       </ul>
       <button type="button">Buy Now</button>
     </li>
-    <li>
-      <h5>Professional</h5>
-      <span>$ 799.00</span>
-      <p>Per Visit Charge</p>
+    <li class="prise__list-item">
+      <h5 class="prise__list-name">Professional</h5>
+      <span class="prise__list-sum">$ 799.00</span>
+      <p class="prise__list-visit">Per Visit Charge</p>
       <ul>
-        <li>Cable Tray Installations</li>
-        <li>Wiring Upgrades</li>
-        <li>Energy Efficient Lighting</li>
-        <li>Emergency Generating</li>
-        <li>Pools And Hot Tubs</li>
-        <li>Air Conditioning Units</li>
-        <li>Generating Systems</li>
+        <li class="prise__list-li">Cable Tray Installations</li>
+        <li class="prise__list-li">Wiring Upgrades</li>
+        <li class="prise__list-li">Energy Efficient Lighting</li>
+        <li class="prise__list-li">Emergency Generating</li>
+        <li class="prise__list-li">Pools And Hot Tubs</li>
+        <li class="prise__list-li">Air Conditioning Units</li>
+        <li class="prise__list-li">Generating Systems</li>
       </ul>
       <button type="button">Buy Now</button>
     </li>
@@ -71,9 +71,6 @@
   </div>
   <div>
     <ul class="prise__text-botton">
-      <svg class="prise__marker-botton" width="32px" height="32px">
-          <use href="./images/sprite.svg#icon-images-vector-dark"></use>
-        </svg>
       <li class="prise__text-list"> 
         <h5 class="prise__text-name">Affordable Price</h5>
         <p class="prise__text-p">
@@ -82,9 +79,6 @@
           code changes and applications.
         </p>
       </li>
-      <svg class="prise__marker-botton" width="32px" height="32px">
-          <use href="./images/sprite.svg#icon-images-vector-dark"></use>
-        </svg>
       <li class="prise__text-list">
         <h5 class="prise__text-name">Fixed Plan</h5>
         <p class="prise__text-p">
