--- a/src/sass/layout/_prise.scss
+++ b/src/sass/layout/_prise.scss
@@ -75,12 +75,66 @@
   }
 
   &__list-item {
-    
+    width: 380px;
+    height: 663px;
+    padding: 40px;
+    padding-bottom: 50px;
+    margin-right: 30px;
+    background-color: $color-text-white;
+    align-items: center;
+    justify-content: center;
+
+
+    &.last-child {
+      margin-right: 0;
+    }
+  }
+  
+  &__list-name {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 1.5;
+    color: $color-text-dark;
+    letter-spacing: 0.4px;
   }
 
+  &__list-sum {
+    font-family: 'Mulish';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 1.1;
+    color: $color-text-dark;
+    letter-spacing: 0.36px;
+  }
 
+  &__list-visit {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.6;
+    color: $color-text-grey;
+    letter-spacing: 0.32px;
+  }
+  &__list-li {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 1.59;
+    color: $color-text-grey;
+    letter-spacing: 0.36px;
+    text-transform: capitalize;
 
+    margin-bottom: 20px;
 
+    &.last-child {
+        margin-bottom: 0;
+      }
+  }
 
 
 
@@ -99,6 +153,7 @@
 
   &__text-list {
     margin-right: 67px;
+    position: relative;
 
     &.last-child {
       margin-right: 0;
@@ -113,6 +168,20 @@
     line-height: 1.4;
     color: $color-text-dark;
     letter-spacing: 0.36px;
+    
+    &::before {
+      content: " ";
+      background-image: url(../images/sprite.svg#icon-images-vector-dark);
+      position: absolute;
+      display: inline-block;
+      left: -47px;
+      width: 32px;
+      height: 32px;
+      // background-repeat: no-repeat;
+      // background-size: contain;
+      // background-color: transparent;
+      // background-position: center;
+    }
   }
 
   &__text-p {
