--- a/src/partials/mix-form.html
+++ b/src/partials/mix-form.html
@@ -12,7 +12,7 @@
           <h3 class="customers_title">Customers Says</h3>
         </div>
         <div class="slider">
-          <div>          
+          <div class="slider_conteiner">          
             <div class="customer_conteiner">
             <img
               src="./images/mix-form/slider1.jpg"
@@ -38,10 +38,10 @@
             </p>
           </div>
         </div>
-        <div>          
+        <div class="slider_conteiner">          
             <div class="customer_conteiner">
             <img
-              src="./images/mix-form/slider1.jpg"
+              src="./images/mix-form/slider2.jpg"
               alt="#"
               width="70px"
               height="70px"
@@ -64,10 +64,10 @@
             </p>
           </div>
         </div>
-               <div>          
+               <div class="slider_conteiner">          
             <div class="customer_conteiner">
             <img
-              src="./images/mix-form/slider1.jpg"
+              src="./images/mix-form/slider3.jpg"
               alt="#"
               width="70px"
               height="70px"
