--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -88,7 +88,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  // background-image: url(../images/mix-form/left.png);
+  background-image: url(../images/mix-form/slider-left.png);
+  background-repeat: no-repeat;
+  // background-size: contain;
+  background-position: center;
   background-color: #f4f4f4;
 }
 
@@ -99,7 +102,10 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  // background-image: url(../images/mix-form/right.png);
+  background-image: url(../images/mix-form/slider-right.png);
+  background-repeat: no-repeat;
+  // background-size: contain;
+  background-position: center;
   background-color: #f4f4f4;
 }
 
@@ -328,4 +334,9 @@
 .company_item {
   flex-basis: calc((100% - 8 * 50px) / 4);
   margin: 50px;
+}
+
+.slider_conteiner {
+  margin-left: 20px;
+  margin-right: 20px;
 }
