--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -1,4 +1,4 @@
-<section class="section prise" id="prise"></section>
+<section class="section prise" id="prise">
 <div class="container">
   <div class="prise__top">
     <div class="prise__top-left">
@@ -90,3 +90,4 @@
     </ul>
   </div>
 </div>
+</section>
