--- a/src/partials/prise.html
+++ b/src/partials/prise.html
@@ -24,8 +24,10 @@
   <ul class="prise__list">
     <li class="prise__list-item">
       <h5 class="prise__list-name">Basic plan</h5>
+      <div class="prise__span">
       <span class="prise__list-sum">$ 599.00</span>
-      <p class="prise__list-visit">Per Visit Charge</p>
+      <span class="prise__list-visit">Per Visit Charge</span>
+      </div>
       <ul>
         <li class="prise__list-li">Electrical Service</li>
         <li class="prise__list-li">Distribution Power Systemss</li>
@@ -39,8 +41,10 @@
     </li>
     <li class="prise__list-item">
       <h5 class="prise__list-name">Standard</h5>
+      <div class="prise__span">
       <span class="prise__list-sum">$ 699.00</span>
-      <p class="prise__list-visit">Per Visit Charge</p>
+      <span class="prise__list-visit">Per Visit Charge</span>
+      </div>
       <ul>
         <li class="prise__list-li">PLC Controls</li>
         <li class="prise__list-li">Conveyor systems</li>
@@ -54,8 +58,10 @@
     </li>
     <li class="prise__list-item">
       <h5 class="prise__list-name">Professional</h5>
+      <div class="prise__span">
       <span class="prise__list-sum">$ 799.00</span>
-      <p class="prise__list-visit">Per Visit Charge</p>
+      <span class="prise__list-visit">Per Visit Charge</span>
+      </div>
       <ul>
         <li class="prise__list-li">Cable Tray Installations</li>
         <li class="prise__list-li">Wiring Upgrades</li>
