--- a/src/sass/layout/_prise.scss
+++ b/src/sass/layout/_prise.scss
@@ -84,7 +84,6 @@
     align-items: center;
     justify-content: center;
 
-
     &:last-child {
       margin-right: 0;
     }
@@ -99,6 +98,13 @@
     color: $color-text-dark;
     letter-spacing: 0.4px;
     margin-bottom: 7px;
+  }
+
+  &__span {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    border-bottom: 1px solid #D7D7D7;
   }
 
   &__list-sum {
@@ -129,29 +135,24 @@
     color: $color-text-grey;
     letter-spacing: 0.36px;
     text-transform: capitalize;
-
     margin-bottom: 20px;
 
     &.last-child {
-        margin-bottom: 0;
-      }
+      margin-bottom: 0;
+    }
   }
-
-
 
   &__text-botton {
     display: flex;
     margin-top: 60px;
     margin-bottom: 15px;
-    padding-left: 120px;
+    padding-left: 167px;
     padding-right: 120px;
     display: flex;
     
     align-items: center;
     justify-content: center;
-
   }
-
 
   &__text-list {
     margin-right: 99px;
@@ -179,10 +180,6 @@
       left: -47px;
       width: 32px;
       height: 32px;
-      // background-repeat: no-repeat;
-      // background-size: contain;
-      // background-color: transparent;
-      // background-position: center;
     }
   }
 
