--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,7 +11,7 @@
 @import './layout/why-choose';
 @import './layout/gallery';
 @import './layout/mix-form';
-@import './layout/prise';
+@import './layout/price';
 @import './layout/stay-updated';
 @import './layout/footer';
 
