--- a/src/sass/layout/_price.scss
+++ b/src/sass/layout/_price.scss
@@ -1,4 +1,4 @@
-.prise {
+.price {
   background: $background-light-grey;
   
   &__label {
@@ -104,7 +104,9 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    padding-bottom: 38px;
     border-bottom: 1px solid #D7D7D7;
+    margin-bottom: 29px;
   }
 
   &__list-sum {
@@ -137,7 +139,7 @@
     text-transform: capitalize;
     margin-bottom: 20px;
 
-    &.last-child {
+    &:last-child {
       margin-bottom: 0;
     }
   }
@@ -149,7 +151,6 @@
     padding-left: 167px;
     padding-right: 120px;
     display: flex;
-    
     align-items: center;
     justify-content: center;
   }
