--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -37,7 +37,7 @@
         <li class="price__list-li">Generator Installations</li>
         <li class="price__list-li">Innovative Construction</li>
       </ul>
-      <button type="button">Buy Now</button>
+      <button class="price__button" type="button">Buy Now</button>
     </li>
     <li class="price__list-item">
       <h5 class="price__list-name">Standard</h5>
@@ -54,7 +54,7 @@
         <li class="price__list-li">Efficient Lighting Solutions</li>
         <li class="price__list-li">Site lighting</li>
       </ul>
-      <button type="button">Buy Now</button>
+      <button class="price__button" type="button">Buy Now</button>
     </li>
     <li class="price__list-item">
       <h5 class="price__list-name">Professional</h5>
@@ -71,7 +71,7 @@
         <li class="price__list-li">Air Conditioning Units</li>
         <li class="price__list-li">Generating Systems</li>
       </ul>
-      <button type="button">Buy Now</button>
+      <button class="price__button" type="button">Buy Now</button>
     </li>
   </ul>
   </div>
