--- a/src/partials/price.html
+++ b/src/partials/price.html
@@ -28,7 +28,7 @@
       <span class="price__list-sum">$ 599.00</span>
       <span class="price__list-visit">Per Visit Charge</span>
       </div>
-      <ul>
+      <ul class="price__ul">
         <li class="price__list-li">Electrical Service</li>
         <li class="price__list-li">Distribution Power Systemss</li>
         <li class="price__list-li">High & Medium Voltages</li>
@@ -45,7 +45,7 @@
       <span class="price__list-sum">$ 699.00</span>
       <span class="price__list-visit">Per Visit Charge</span>
       </div>
-      <ul>
+      <ul class="price__ul">
         <li class="price__list-li">PLC Controls</li>
         <li class="price__list-li">Conveyor systems</li>
         <li class="price__list-li">Wiring renovations</li>
@@ -62,7 +62,7 @@
       <span class="price__list-sum">$ 799.00</span>
       <span class="price__list-visit">Per Visit Charge</span>
       </div>
-      <ul>
+      <ul class="price__ul">
         <li class="price__list-li">Cable Tray Installations</li>
         <li class="price__list-li">Wiring Upgrades</li>
         <li class="price__list-li">Energy Efficient Lighting</li>
