--- a/src/sass/layout/_price.scss
+++ b/src/sass/layout/_price.scss
@@ -128,6 +128,11 @@
     color: $color-text-grey;
     letter-spacing: 0.32px;
   }
+
+  &__ul {
+    padding-left: 30px;
+  }
+
   &__list-li {
     font-family: 'Inter';
     font-style: normal;
