--- a/src/sass/layout/_price.scss
+++ b/src/sass/layout/_price.scss
@@ -151,11 +151,9 @@
       position: absolute;
       display: inline-block;
       left: -30px;
+      top: 4px;
       width: 17px;
       height: 17px;
-      // padding-left: 60px;
-      // margin-right: 13px;
-    
       background-repeat: no-repeat;
       background-position: center;
       background-color: transparent;
