--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -132,7 +132,17 @@
 
 .slick-prev:before,
 .slick-next:before {
-  font-size: 0;
+  position: absolute;
+  top: 300px;
+  right: 420px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-image: url(../images/mix-form/slider-right.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f4f4f4;
+  transition: background-color 300ms linear;
 }
 
 .customer_conteiner {
