--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 @import './layout/mix-form';
 @import './layout/price';
 @import './layout/stay-updated';
+@import './layout/footer-orange';
 @import './layout/footer';
 
 
