--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -124,7 +124,7 @@
   &:hover,
   &:focus {
     background-color: #ffb342;
-    background-image: url(../images/mix-form/slider-right.png);
+    // background-image: url(../images/mix-form/slider-right.png);
     background-repeat: no-repeat;
     background-position: center;
   }
