--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,8 @@
 @import './base';
 @import './reset';
 @import './hidden';
+@import './scroll-to-top';
+@import './animations';
 @import './layout/hero-header';
 @import './layout/welcome';
 @import './layout/what-offer';
@@ -15,8 +17,3 @@
 @import './layout/stay-updated';
 @import './layout/footer-orange';
 @import './layout/footer';
-
-
-
-
-
