--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -83,10 +83,9 @@
   margin-bottom: 40px;
 }
 
-// .slider_conteiner {
-//   margin-left: 20px;
-//   margin-right: 20px;
-// }
+.slick-list {
+  overflow: hidden;
+}
 
 .slick-prev {
   position: absolute;
