--- a/src/sass/layout/_mix-form.scss
+++ b/src/sass/layout/_mix-form.scss
@@ -133,8 +133,7 @@
 
 .slick-prev:before,
 .slick-next:before {
-  display: none;
-  // position: absolute;
+  position: absolute;
   // top: 300px;
   // right: 420px;
   // width: 50px;
